[package]
name = "texted_adventure"
version = "0.1.0"
authors = ["InnocentusLime <innocentuslime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "*"
yaml-rust = "*"
linked-hash-map = "*"
clap = "*"
regex = "*"
