[package]
name = "texted_adventure"
version = "0.1.0"
authors = ["InnocentusLime <innocentuslime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "4"
yaml-rust = "0.4"
linked-hash-map = "0.5"
clap = "3"
regex = "1"
